<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">thirdApp</string>
    <string name="next">Next</string>
    <string name="textview">TextView</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="address_information">Address information</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="personal_information">Personal information</string>
    <string name="additional_info">Additional info</string>
    <string name="social_network">Social network</string>
    <string name="users">Users</string>
</resources>